[package]
name = "cumulus-client-collator"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
# Substrate dependencies
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "dp-jsonrpsee-integration-companion" }
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot", branch = "dp-jsonrpsee-integration-companion" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "dp-jsonrpsee-integration-companion" }
polkadot-node-subsystem = { git = "https://github.com/paritytech/polkadot", branch = "dp-jsonrpsee-integration-companion" }

# Cumulus dependencies
cumulus-client-network = { path = "../network" }
cumulus-client-consensus-common = { path = "../consensus/common" }
cumulus-primitives-core = { path = "../../primitives/core" }

# Other dependencies
codec = { package = "parity-scale-codec", version = "2.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
parking_lot = "0.10.2"
tracing = "0.1.25"

[dev-dependencies]
# Polkadot dependencies
polkadot-node-subsystem-test-helpers = { git = "https://github.com/paritytech/polkadot", branch = "dp-jsonrpsee-integration-companion" }

# Cumulus dependencies
cumulus-test-runtime = { path = "../../test/runtime" }
cumulus-test-client = { path = "../../test/client" }
# Substrate dependencies

sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }

# Other dependencies
async-trait = "0.1.42"
