[package]
name = "cumulus-client-network"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Cumulus-specific networking protocol"
edition = "2021"

[dependencies]
# Substrate deps
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "dp-jsonrpsee-integration-companion" }
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot", branch = "dp-jsonrpsee-integration-companion" }
polkadot-client = { git = "https://github.com/paritytech/polkadot", branch = "dp-jsonrpsee-integration-companion" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "dp-jsonrpsee-integration-companion" }

# other deps
codec = { package = "parity-scale-codec", version = "2.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.2"
tracing = "0.1.22"
parking_lot = "0.10.2"
derive_more = "0.99.2"

[dev-dependencies]
tokio = { version = "1.10", features = ["macros"] }

# Cumulus deps
cumulus-test-service = { path = "../../test/service" }
cumulus-primitives-core = { path = "../../primitives/core" }

# Polkadot deps
polkadot-test-client = { git = "https://github.com/paritytech/polkadot", branch = "dp-jsonrpsee-integration-companion" }

# substrate deps
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
