[package]
name = "parachain-template-node"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/cumulus/"
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }

[[bin]]
name = "parachain-collator"
path = "src/main.rs"

[features]
runtime-benchmarks = ["parachain-template-runtime/runtime-benchmarks"]

[dependencies]
derive_more = "0.99.2"
log = "0.4.14"
codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.8"
serde = { version = "1.0.119", features = ["derive"] }
hex-literal = "0.3.1"

# RPC related Dependencies
jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee", rev = "9a3c1e981bcdbbb558b1457bbd78277a14dca2da", features = ["server"] }

# Local Dependencies
parachain-template-runtime = { path = "../runtime" }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }

## Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] , branch = "dp-jsonrpsee-integration-2" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }

## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "dp-jsonrpsee-integration-2" }

# Cumulus dependencies
cumulus-client-cli = { path = "../../client/cli" }
cumulus-client-collator = { path = "../../client/collator" }
cumulus-client-consensus-aura = { path = "../../client/consensus/aura" }
cumulus-client-consensus-common = { path = "../../client/consensus/common" }
cumulus-client-network = { path = "../../client/network" }
cumulus-client-service = { path = "../../client/service" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }

# Polkadot dependencies
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "dp-jsonrpsee-integration-companion" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "dp-jsonrpsee-integration-companion" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "dp-jsonrpsee-integration-companion" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "dp-jsonrpsee-integration-companion" }
